--- a/index.html
+++ b/index.html
@@ -1,120 +1,133 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cashy4U</title>
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"> -->
-    <script defer src="js/all.js"></script>
-</head>
-
-<body>
-    <div>
-        <section class="hero is-fullheight is-light is-bold ">
-            <div class="hero-head">
-                <nav class="navbar">
-                    <div class="container">
-                        <div class="navbar-brand">
-                            <a class="navbar-item">
-                                <!-- <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo"> -->
-                                <span class="has-text-weight-bold is-size-4">
-                                    Cashy4U
-                                </span>
-                            </a>
-                            <span class="navbar-burger burger" data-target="navbarMenuHeroB">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </span>
-                        </div>
-                        <div id="navbarMenuHeroB" class="navbar-menu ">
-                            <div class="navbar-end">
-                                <a class="navbar-item">
-                                    Home
-                                </a>
-                                <a class="navbar-item">
-                                    Examples
-                                </a>
-                                <a class="navbar-item">
-                                    Documentation
-                                </a>
-                                <!-- <span class="navbar-item">
-                                    <a class="button is-danger">
-                                        <span class="icon">
-                                            <i class="fab fa-github"></i>
-                                        </span>
-                                        <span>Download</span>
-                                    </a>
-                                </span> -->
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-            <div class="hero-body">
-                <div class="container is-fluid">
-                    <div class="columns">
-                        <div class="column">
-                            <div class="container">
-                                <h1 class="title is-size-3 ">
-                                    Lo necesario para mantener cerca a la familia.
-                                </h1>
-                                <h2 class="subtitle">
-                                    Envío de remesas, recargas y pago de servicios básicos.
-                                </h2>
-                            </div>
-                        </div>
-                        <div class="column is-offset-1">
-                            <figure class="image is-5by4">
-                                <img src="resources/mobile.svg">
-                            </figure>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section is-medium">
-            <nav class="level">
-                <div class="level-item has-text-centered">
-                    <div>
-                        <p class="heading">Tweets</p>
-                        <p class="title">3,456</p>
-                    </div>
-                </div>
-                <div class="level-item has-text-centered">
-                    <div>
-                        <p class="heading">Following</p>
-                        <p class="title">123</p>
-                    </div>
-                </div>
-                <div class="level-item has-text-centered">
-                    <div>
-                        <p class="heading">Followers</p>
-                        <p class="title">456K</p>
-                    </div>
-                </div>
-                <div class="level-item has-text-centered">
-                    <div>
-                        <p class="heading">Likes</p>
-                        <p class="title">789</p>
-                    </div>
-                </div>
-            </nav>
-        </section>
-        <footer class="footer">
-            <div class="content has-text-centered">
-                <p>
-                    <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is
-                    licensed
-                    <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                    is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-                </p>
-            </div>
-        </footer>
-    </div>
+<body style="box-sizing: border-box; margin: 0;">
+<table class="main-body"
+       style="box-sizing: border-box; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; height: 100%; background-color: rgb(234, 236, 237);"
+       width="100%" height="100%" bgcolor="rgb(234, 236, 237)">
+    <tbody style="box-sizing: border-box;">
+    <tr class="row" style="box-sizing: border-box; vertical-align: top;" valign="top">
+        <td class="main-body-cell" style="box-sizing: border-box;">
+            <table class="container"
+                   style="box-sizing: border-box; font-family: Helvetica, serif; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto; height: 0px; width: 90%; max-width: 550px;"
+                   width="90%" height="0">
+                <tbody style="box-sizing: border-box;">
+                <tr style="box-sizing: border-box;">
+                    <td class="container-cell"
+                        style="box-sizing: border-box; vertical-align: top; font-size: medium; padding-bottom: 50px;"
+                        valign="top">
+                        <table class="c1766"
+                               style="box-sizing: border-box; margin-top: 0px; margin-right: auto; margin-bottom: 10px; margin-left: 0px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; min-height: 30px;"
+                               width="100%">
+                            <tbody style="box-sizing: border-box;">
+                            <tr style="box-sizing: border-box;">
+                                <td class="cell c1769" style="box-sizing: border-box; width: 11%;" width="11%">
+                                    <img src="//artf.github.io/grapesjs/img/grapesjs-logo.png" alt="GrapesJS."
+                                         class="c926"
+                                         style="box-sizing: border-box; color: rgb(158, 83, 129); width: 100%; font-size: 50px;">
+                                </td>
+                                <td class="cell c1776"
+                                    style="box-sizing: border-box; width: 70%; vertical-align: middle;" width="70%"
+                                    valign="middle">
+                                    <div class="c1144"
+                                         style="box-sizing: border-box; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; font-size: 17px; font-weight: 300;">
+                                        GrapesJS Newsletter Builder
+                                        <br style="box-sizing: border-box;">
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="card"
+                               style="box-sizing: border-box; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; margin-bottom: 20px; height: 0px;"
+                               height="0">
+                            <tbody style="box-sizing: border-box;">
+                            <tr style="box-sizing: border-box;">
+                                <td class="card-cell"
+                                    style="box-sizing: border-box; background-color: rgb(255, 255, 255); overflow-x: hidden; overflow-y: hidden; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; text-align: center;"
+                                    bgcolor="rgb(255, 255, 255)" align="center">
+                                    <table class="table100 c1357"
+                                           style="box-sizing: border-box; width: 100%; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; height: 0px; margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; border-collapse: collapse;"
+                                           width="100%" height="0">
+                                        <tbody style="box-sizing: border-box;">
+                                        <tr style="box-sizing: border-box;">
+                                            <td class="card-content"
+                                                style="box-sizing: border-box; font-size: 13px; line-height: 20px; color: rgb(111, 119, 125); padding-top: 10px; padding-right: 20px; padding-bottom: 0px; padding-left: 20px; vertical-align: top;"
+                                                valign="top">
+                                                <h1 class="card-title"
+                                                    style="box-sizing: border-box; font-size: 25px; font-weight: 300; color: rgb(68, 68, 68);">
+                                                    Build your newsletters faster than ever
+                                                    <br style="box-sizing: border-box;">
+                                                </h1>
+                                                <p class="card-text" style="box-sizing: border-box;">Import, build, test
+                                                    and export responsive newsletter templates faster than ever using
+                                                    the GrapesJS Newsletter Builder.
+                                                </p>
+                                                <table class="c1542"
+                                                       style="box-sizing: border-box; margin-top: 0px; margin-right: auto; margin-bottom: 10px; margin-left: auto; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%;"
+                                                       width="100%">
+                                                    <tbody style="box-sizing: border-box;">
+                                                    <tr style="box-sizing: border-box;">
+                                                        <td id="c1545" class="card-footer"
+                                                            style="box-sizing: border-box; padding-top: 20px; padding-right: 0px; padding-bottom: 20px; padding-left: 0px; text-align: center;"
+                                                            align="center">
+                                                            <a href="https://flkcn.com" class="button"
+                                                               style="box-sizing: border-box; font-size: 12px; padding-top: 10px; padding-right: 20px; padding-bottom: 10px; padding-left: 20px; background-color: rgb(227,33,41); color: rgb(255, 255, 255); text-align: center; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; font-weight: 300;">Free
+                                                                and Open Source
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="footer"
+                               style="box-sizing: border-box; margin-top: 50px; color: rgb(152, 156, 165); text-align: center; font-size: 11px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px;"
+                               align="center">
+                            <tbody style="box-sizing: border-box;">
+                            <tr style="box-sizing: border-box;">
+                                <td class="footer-cell" style="box-sizing: border-box;">
+                                    <div class="c2577"
+                                         style="box-sizing: border-box; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
+                                        <p class="footer-info" style="box-sizing: border-box;">GrapesJS Newsletter
+                                            Builder is a free and open source preset (plugin) used on top of the
+                                            GrapesJS core library.
+                                            For more information about and how to integrate it inside your applications
+                                            check
+                                        </p>
+                                        <p style="box-sizing: border-box;">
+                                            <a href="https://github.com/artf/grapesjs-preset-newsletter" class="link"
+                                               style="box-sizing: border-box; color: rgb(217, 131, 166);">GrapesJS
+                                                Newsletter Preset</a>
+                                            <br style="box-sizing: border-box;">
+                                        </p>
+                                    </div>
+                                    <div class="c2421"
+                                         style="box-sizing: border-box; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
+                                        MADE BY
+                                        <a href="https://github.com/artf" class="link"
+                                           style="box-sizing: border-box; color: rgb(217, 131, 166);">IGUANAIT</a>
+                                        <p style="box-sizing: border-box;">
+                                        </p>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
 
 </html>
