--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <body style="box-sizing: border-box; margin: 0;">
 <table class="main-body"
-       style="box-sizing: border-box; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; height: 100%; background-color: rgb(234, 236, 237);"
+
+       style="box-sizing: border-box; min-height: 150px; padding-top: 15px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; height: 100%; background-color: rgb(255,255,255);"
        width="100%" height="100%" bgcolor="rgb(234, 236, 237)">
     <tbody style="box-sizing: border-box;">
     <tr class="row" style="box-sizing: border-box; vertical-align: top;" valign="top">
@@ -22,7 +23,8 @@
                             <tbody style="box-sizing: border-box;">
                             <tr style="box-sizing: border-box;">
                                 <td class="cell c1769" style="box-sizing: border-box; width: 11%;" width="11%">
-                                    <img src="//artf.github.io/grapesjs/img/grapesjs-logo.png" alt="GrapesJS."
+                                    <img src="https://imagedelivery.net/9F8EkTDPoPSeohwsm3gm8w/e32ca384-9ba3-4070-b48f-9c07b56f3100/public"
+                                         alt="Flckn."
                                          class="c926"
                                          style="box-sizing: border-box; color: rgb(158, 83, 129); width: 100%; font-size: 50px;">
                                 </td>
@@ -31,7 +33,6 @@
                                     valign="middle">
                                     <div class="c1144"
                                          style="box-sizing: border-box; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; font-size: 17px; font-weight: 300;">
-                                        GrapesJS Newsletter Builder
                                         <br style="box-sizing: border-box;">
                                     </div>
                                 </td>
@@ -54,17 +55,24 @@
                                             <td class="card-content"
                                                 style="box-sizing: border-box; font-size: 13px; line-height: 20px; color: rgb(111, 119, 125); padding-top: 10px; padding-right: 20px; padding-bottom: 0px; padding-left: 20px; vertical-align: top;"
                                                 valign="top">
+
                                                 <h1 class="card-title"
-                                                    style="box-sizing: border-box; font-size: 25px; font-weight: 300; color: rgb(68, 68, 68);">
-                                                    Build your newsletters faster than ever
+
+                                                    style="box-sizing: border-box; font-size: 20px; text-align: left;
+                                                    font-weight: 600; color: rgb(68, 68, 68);">
+                                                    Build your best experience
                                                     <br style="box-sizing: border-box;">
                                                 </h1>
-                                                <p class="card-text" style="box-sizing: border-box;">Import, build, test
-                                                    and export responsive newsletter templates faster than ever using
-                                                    the GrapesJS Newsletter Builder.
+
+                                                <p class="card-text" style="box-sizing: border-box; text-align: left;">
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                                                    accusantium aliquam fugit illo optio reiciendis saepe sunt?
+                                                    Consequatur deleniti distinctio explicabo facere molestias odio
+                                                    totam. Corporis ea nemo quod vel.
+
                                                 </p>
                                                 <table class="c1542"
-                                                       style="box-sizing: border-box; margin-top: 0px; margin-right: auto; margin-bottom: 10px; margin-left: auto; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%;"
+                                                       style="box-sizing: border-box; margin-top: 10px; margin-right: auto; margin-bottom: 10px; margin-left: auto; padding-top: 25px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%;"
                                                        width="100%">
                                                     <tbody style="box-sizing: border-box;">
                                                     <tr style="box-sizing: border-box;">
@@ -72,8 +80,9 @@
                                                             style="box-sizing: border-box; padding-top: 20px; padding-right: 0px; padding-bottom: 20px; padding-left: 0px; text-align: center;"
                                                             align="center">
                                                             <a href="https://flkcn.com" class="button"
-                                                               style="box-sizing: border-box; font-size: 12px; padding-top: 10px; padding-right: 20px; padding-bottom: 10px; padding-left: 20px; background-color: rgb(227,33,41); color: rgb(255, 255, 255); text-align: center; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; font-weight: 300;">Free
-                                                                and Open Source
+                                                               style="box-sizing: border-box; text-decoration: none;
+                                                                font-size: 12px; padding-top: 10px; padding-right: 20px; padding-bottom: 10px; padding-left: 20px; background-color: rgb(227,33,41); color: rgb(255, 255, 255); text-align: center; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; font-weight: 300;">Go
+                                                                to Store
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -95,15 +104,11 @@
                                 <td class="footer-cell" style="box-sizing: border-box;">
                                     <div class="c2577"
                                          style="box-sizing: border-box; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
-                                        <p class="footer-info" style="box-sizing: border-box;">GrapesJS Newsletter
-                                            Builder is a free and open source preset (plugin) used on top of the
-                                            GrapesJS core library.
-                                            For more information about and how to integrate it inside your applications
-                                            check
+                                        <p class="footer-info" style="box-sizing: border-box;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium aliquam fugit illo optio reiciendis saepe sunt? Consequatur deleniti distinctio explicabo facere molestias odio totam. Corporis ea nemo quod vel.
                                         </p>
                                         <p style="box-sizing: border-box;">
                                             <a href="https://github.com/artf/grapesjs-preset-newsletter" class="link"
-                                               style="box-sizing: border-box; color: rgb(217, 131, 166);">GrapesJS
+                                               style="box-sizing: border-box; color: rgb(227,33,41);">Flckn
                                                 Newsletter Preset</a>
                                             <br style="box-sizing: border-box;">
                                         </p>
@@ -112,7 +117,7 @@
                                          style="box-sizing: border-box; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
                                         MADE BY
                                         <a href="https://github.com/artf" class="link"
-                                           style="box-sizing: border-box; color: rgb(217, 131, 166);">IGUANAIT</a>
+                                           style="box-sizing: border-box; color: rgb(227,33,41);">IGUANAIT</a>
                                         <p style="box-sizing: border-box;">
                                         </p>
                                     </div>
