--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                                                         <td id="c1545" class="card-footer"
                                                             style="box-sizing: border-box; padding-top: 20px; padding-right: 0px; padding-bottom: 20px; padding-left: 0px; text-align: center;"
                                                             align="center">
-                                                            <a href="https://flkcn.com" class="button"
-                                                               style="box-sizing: border-box; text-decoration: none;
+
+                                                            <a href="https://flckn.com" class="button"
+                                                               style="box-sizing: border-box; text-decoration: none; font-weight: 600;
                                                                 font-size: 12px; padding-top: 10px; padding-right: 20px; padding-bottom: 10px; padding-left: 20px; background-color: rgb(227,33,41); color: rgb(255, 255, 255); text-align: center; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; font-weight: 300;">Go
                                                                 to Store
                                                             </a>
