--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <tbody style="box-sizing: border-box;">
     <tr class="row" style="box-sizing: border-box; vertical-align: top;" valign="top">
         <td class="main-body-cell" style="box-sizing: border-box;">
+
             <table class="container"
                    style="box-sizing: border-box; font-family: Helvetica, serif; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto; height: 0px; width: 90%; max-width: 550px;"
                    width="90%" height="0">
@@ -17,6 +18,7 @@
                     <td class="container-cell"
                         style="box-sizing: border-box; vertical-align: top; font-size: medium; padding-bottom: 50px;"
                         valign="top">
+
                         <table class="c1766"
                                style="box-sizing: border-box; margin-top: 0px; margin-right: auto; margin-bottom: 10px; margin-left: 0px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; width: 100%; min-height: 30px;"
                                width="100%">
@@ -39,6 +41,7 @@
                             </tr>
                             </tbody>
                         </table>
+                        <hr style="box-sizing: border-box; margin-top: 0px; margin-right: auto; margin-bottom: 10px; margin-left: auto; border-top: 1px solid rgb(234, 236, 237); width: 100%;">
                         <table class="card"
                                style="box-sizing: border-box; min-height: 150px; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; margin-bottom: 20px; height: 0px;"
                                height="0">
@@ -82,8 +85,9 @@
 
                                                             <a href="https://flckn.com" class="button"
                                                                style="box-sizing: border-box; text-decoration: none; font-weight: 600;
-                                                                font-size: 12px; padding-top: 10px; padding-right: 20px; padding-bottom: 10px; padding-left: 20px; background-color: rgb(227,33,41); color: rgb(255, 255, 255); text-align: center; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; font-weight: 300;">Go
-                                                                to Store
+                                                                font-size: 12px; padding-top: 10px; padding-right: 20px; padding-bottom: 10px; padding-left: 20px; background-color: rgb(227,33,41); color: rgb(255, 255, 255);  border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; font-weight: 600;">
+                                                                Get Started
+
                                                             </a>
                                                         </td>
                                                     </tr>
