--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     </o:OfficeDocumentSettings>
 </xml>
 <![endif]-->
+    <style>
+ @media( max-width: 992 ) {
+     table.container {
+       width: 100%!important; 
+     }
+
+  }
+</style>
 </head>
 
 <body style="box-sizing: border-box; margin: 0;">
